; ModuleID = '/home/carl/AnghaBench/lab/engine/code/q3_ui/extr_ui_mfield.c_MField_Paste.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/q3_ui/extr_ui_mfield.c_MField_Paste.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MField_Paste(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca [64 x i8], align 16
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = getelementptr inbounds [64 x i8], [64 x i8]* %3, i64 0, i64 0
  %7 = call i32 @trap_GetClipboardData(i8* %6, i32 64)
  %8 = getelementptr inbounds [64 x i8], [64 x i8]* %3, i64 0, i64 0
  %9 = call i32 @strlen(i8* %8)
  store i32 %9, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %10

10:                                               ; preds = %21, %1
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %24

14:                                               ; preds = %10
  %15 = load i32*, i32** %2, align 8
  %16 = load i32, i32* %5, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds [64 x i8], [64 x i8]* %3, i64 0, i64 %17
  %19 = load i8, i8* %18, align 1
  %20 = call i32 @MField_CharEvent(i32* %15, i8 signext %19)
  br label %21

21:                                               ; preds = %14
  %22 = load i32, i32* %5, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %5, align 4
  br label %10

24:                                               ; preds = %10
  ret void
}

declare dso_local i32 @trap_GetClipboardData(i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @MField_CharEvent(i32*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
